# -LLM-Authorship-Signal-Analyzer-for-Human-Data-Pipelines

./: BUG_FIX_GUIDE.md  INSTALL.md  QA_REPORT.md  README.md  TEST_COVERAGE_ANALYSIS.md  gap_analysis.md  install.ps1  install.sh  lexicon_packs.py  lexicon_packs_integration.py  llm_detector  llm_detector.py  llm_detector.spec  pyproject.toml  requirements.txt  run_detector  test_llm_detector.py  test_v061_features.py
.github/workflows/: build.yml
dist_single/: llm_detector.py
llm_detector/: __init__.py  _constants.py  baselines.py  calibration.py  cli.py  compat.py  dashboard.py  fusion.py  gui.py  html_report.py  io.py  memory.py  pipeline.py  reporting.py  similarity.py  text_utils.py
llm_detector/analyzers/: __init__.py  continuation_api.py  continuation_local.py  fingerprint.py  perplexity.py  preamble.py  self_similarity.py  semantic_flow.py  stylometry.py  token_cohesiveness.py  windowing.py
llm_detector/channels/: __init__.py  continuation.py  prompt_structure.py  stylometric.py
llm_detector/lexicon/: packs.py
reports/: uc_audit_evidence_packet.md  uc_audit_full_result.json
tests/: test_analyzers.py  test_cli.py  test_continuation_local.py  test_dashboard_rerun.py  test_fusion.py  test_gui_dashboard_features.py  test_hf_token.py  test_html_report.py  test_io_loaders.py  test_memory.py  test_pipeline.py  test_preamble_cot.py  test_reporting.py  test_semantic_flow.py  test_token_cohesiveness.py  test_xray_spans.py
