[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-detector"
version = "0.67.0"
description = "Multi-layer stylometric detection pipeline for identifying LLM-generated task prompts"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

dependencies = [
    "pandas>=1.5",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
api = [
    "anthropic>=0.20",
    "openai>=1.0",
]
nlp = [
    "spacy>=3.0",
    "ftfy>=6.0",
    "sentence-transformers>=2.0",
    "scikit-learn>=1.0",
]
perplexity = [
    "transformers>=4.20",
    "torch>=2.0",
]
pdf = [
    "pypdf>=3.0",
]
web = [
    "streamlit>=1.20",
]
all = [
    "llm-detector[api,nlp,perplexity,pdf,web]",
]
bundle = [
    "llm-detector[api,nlp,perplexity,pdf]",
    "pyinstaller>=6.0",
]

[project.scripts]
llm-detector = "llm_detector.cli:main"
llm-detector-dashboard = "llm_detector.cli:main_web"

[project.gui-scripts]
llm-detector-gui = "llm_detector.cli:main_gui"

[tool.setuptools.packages.find]
include = ["llm_detector*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "network: marks tests that require network access",
    "ml: marks tests that require ML dependencies (transformers, sentence-transformers)",
]

[tool.coverage.run]
source = ["llm_detector"]
omit = [
    "llm_detector/__main__.py",
    "llm_detector/gui.py",
    "llm_detector/dashboard.py",
]

[tool.coverage.report]
fail_under = 60
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
